--- a/config/config.json
+++ b/config/config.json
@@ -2,5 +2,8 @@
   "server": {
     "host": "192.168.0.5",
     "port": 3001
+  },
+  "apiEndpoints": {
+    "explorer": "https://explorer.vertcoin.org/api/"
   }
 }
