--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,7 @@
     "port": 3001
   },
   "apiEndpoints": {
-    "explorer": "https://explorer.vertcoin.org/api/"
+    "explorer": "http://192.168.0.5:3001",
+    "coinMarket": "https://api.coinmarketcap.com/v1/ticker/vertcoin/"
   }
 }
