--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Andrlex/vertcoin-dash#readme",
   "dependencies": {
+    "angular-google-analytics": "^1.1.8",
     "grunt": "~1.0.1",
     "grunt-angular-templates": "^1.1.0",
     "grunt-bower-task": "~0.5.0",
