--- a/config/config.live.json
+++ b/config/config.live.json
@@ -1,6 +1,6 @@
 {
   "apiEndpoints": {
-    "explorer": "https://www.vertcoin-dashboard.com",
+    "explorer": "https://www.vertcoin-dashboard.co.uk",
     "coinMarket": "https://api.coinmarketcap.com/v1/ticker/vertcoin/"
   }
 }
