--- a/config/config.json
+++ b/config/config.json
@@ -5,6 +5,7 @@
   },
   "apiEndpoints": {
     "explorer": "http://192.168.0.5:3001",
-    "coinMarket": "https://api.coinmarketcap.com/v1/ticker/vertcoin/"
+    "coinMarket": "https://api.coinmarketcap.com/v1/ticker/vertcoin/",
+    "coinPap": "https://api.coinpaprika.com/v1/tickers/vtc-vertcoin"
   }
 }
